<resources>
    <string name="app_name">Mad Level 4 Task 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_view_welcome">Welcome</string>
    <string name="text_view_instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="text_view_versus">V.S.</string>
    <string name="text_view_computer">Computer</string>
    <string name="text_view_you">You</string>
    <string name="text_win">You win!</string>
    <string name="text_draw">Draw!</string>
    <string name="text_lose">You lost!</string>
    <string name="action_delete_all">action_delete_all</string>
</resources>